--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -28,7 +28,9 @@ resource_types:
 resources:
   - #@ gcr_image_resource("task-image", "gcr.io/gemfire-dev/gemfire-develop-alpine-tools")
   - #@ docker_image_resource("packer-image", "hashicorp/packer")
+  - #@ docker_image_resource("ytt-image", "gerritk/ytt")
   - #@ git_resource("source", repository_url(data.values.repository), data.values.repository.branch, ignore_paths=["ci/*", "packer/*"])
+  - #@ git_resource("ci-source", repository_url(data.values.repository), data.values.repository.branch, ["ci/*"])
   - #@ git_resource("packer-source", repository_url(data.values.repository), data.values.repository.branch, ["packer/*"])
   #@ for build in data.values.builds:
   - #@ gci_resource(image_family_name(extends_build(build).image_family), "gemfire-dev")
@@ -41,3 +43,31 @@ jobs:
   - #@ build_job(extends_build(build), config)
   - #@ packer_job(extends_build(build))
   #@ end
+  - name: set-pipeline
+    serial: true
+    plan:
+      - in_parallel:
+          fail_fast: true
+          steps:
+            - get: ytt-image
+            - get: ci-source
+              trigger: true
+      - task: ytt
+        image: ytt-image
+        config:
+          platform: linux
+          inputs:
+            - name: ci-source
+              path: source
+          outputs:
+            - name: pipeline
+          params:
+          run:
+            path: /usr/bin/ytt
+            args:
+              - --file
+              - source/ci/.
+              - --output-files
+              - pipeline/
+      - set_pipeline: test
+        file: pipeline/pipeline.yml
