--- a/ci/data.yml
+++ b/ci/data.yml
@@ -15,15 +15,19 @@
 
 #@data/values
 ---
-google:
-  project: gemfire-dev
-  zone: us-central1-f
+pipeline:
+  name: develop
 
 repository:
+  url: https://github.com/apache/geode-native
+  branch: develop
   base: https://github.com/
   owner: apache
   project: geode-native
-  branch: develop
+
+google:
+  project: gemfire-dev
+  zone: us-central1-f
 
 default:
   build:
