--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -6,8 +6,7 @@
 #@      "image_family_name",
 #@      "build_job",
 #@      "packer_job",
-#@      "update_pipeline_job",
-#@      "repository_url")
+#@      "update_pipeline_job")
 #@ load("@ytt:data", "data")
 #@ load("@ytt:overlay", "overlay")
 #@ load("@ytt:struct", "struct")
@@ -41,9 +40,9 @@ resources:
   - #@ gcr_image_resource("task-image", "gcr.io/gemfire-dev/gemfire-develop-alpine-tools")
   - #@ docker_image_resource("packer-image", "hashicorp/packer")
   - #@ docker_image_resource("ytt-image", "gerritk/ytt")
-  - #@ git_resource("source", repository_url(data.values.repository), data.values.repository.branch, ignore_paths=["ci/*", "packer/*"])
-  - #@ git_resource("ci-source", repository_url(data.values.repository), data.values.repository.branch, ["ci/*"])
-  - #@ git_resource("packer-source", repository_url(data.values.repository), data.values.repository.branch, ["packer/*"])
+  - #@ git_resource("source", data.values.repository.url, data.values.repository.branch, ignore_paths=["ci/*", "packer/*"])
+  - #@ git_resource("ci-source", data.values.repository.url, data.values.repository.branch, ["ci/*"])
+  - #@ git_resource("packer-source", data.values.repository.url, data.values.repository.branch, ["packer/*"])
   #@ for build in data.values.builds:
   - #@ gci_resource(image_family_name(extends_build(build).image_family))
   - #@ gci_resource(extends_build(build).source_image_family)
@@ -55,4 +54,4 @@ jobs:
   - #@ build_job(extends_build(build), config)
   - #@ packer_job(extends_build(build))
   #@ end
-  - #@ update_pipeline_job(data.values.repository)
+  - #@ update_pipeline_job()
