--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,16 +1,3 @@
-#@ load("templates.lib.yml",
-#@      "gcr_image_resource",
-#@      "git_resource",
-#@      "gci_resource",
-#@      "docker_image_resource",
-#@      "image_family_name",
-#@      "build_job",
-#@      "packer_job",
-#@      "update_pipeline_job")
-#@ load("@ytt:data", "data")
-#@ load("@ytt:overlay", "overlay")
-#@ load("@ytt:struct", "struct")
-
 #! Licensed to the Apache Software Foundation (ASF) under one or more
 #! contributor license agreements.  See the NOTICE file distributed with
 #! this work for additional information regarding copyright ownership.
@@ -25,6 +12,21 @@
 #! WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #! See the License for the specific language governing permissions and
 #! limitations under the License.
+
+#@ load("templates.lib.yml",
+#@      "gcr_image_resource",
+#@      "git_resource",
+#@      "gci_resource",
+#@      "docker_image_resource",
+#@      "image_family_name",
+#@      "build_job",
+#@      "build_job_name",
+#@      "packer_job",
+#@      "packer_job_name",
+#@      "update_pipeline_job")
+#@ load("@ytt:data", "data")
+#@ load("@ytt:overlay", "overlay")
+#@ load("@ytt:struct", "struct")
 
 #@ def extends_build(build):
 #@ return struct.make(**overlay.apply(data.values.default.build, build))
@@ -55,3 +57,26 @@ jobs:
   - #@ packer_job(extends_build(build))
   #@ end
   - #@ update_pipeline_job()
+
+groups:
+  - name: builds
+    jobs:
+      #@ for build in data.values.builds:
+      #@ for/end config in data.values.configs:
+      - #@ build_job_name(extends_build(build), config)
+      #@ end
+  - name: images
+    jobs:
+      #@ for/end build in data.values.builds:
+      - #@ packer_job_name(extends_build(build))
+  - name: meta
+    jobs:
+      - update-pipeline
+  - name: all
+    jobs:
+      #@ for build in data.values.builds:
+      #@ for/end config in data.values.configs:
+      - #@ build_job_name(extends_build(build), config)
+      - #@ packer_job_name(extends_build(build))
+      #@ end
+      - update-pipeline
