--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -39,6 +39,7 @@ resource_types:
       repository: smgoller/gci-resource
 
 resources:
+  - #@ gcr_image_resource("gcloud-image", "gcr.io/google.com/cloudsdktool/cloud-sdk", "alpine")
   - #@ gcr_image_resource("task-image", "gcr.io/gemfire-dev/gemfire-develop-alpine-tools")
   - #@ docker_image_resource("packer-image", "hashicorp/packer")
   - #@ docker_image_resource("ytt-image", "gerritk/ytt")
