Fixes Dockerfile path and caches.

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -65,7 +65,8 @@ jobs:
         trigger: true
       - put: task-image
         params:
-          build: ci/docker/task
+          build: ci-source/ci/docker/task
+          cache: true
 
 groups:
   - name: builds
